# chip8

./: .gitignore  Cargo.toml  README.md
chip8_core/: Cargo.toml
chip8_core/src/: consts.rs  instruction.rs  lib.rs  memory.rs
chip8_core/src/executor/: arithmetic.rs  display.rs  flow_control.rs  input.rs  memory.rs  mod.rs
chip8_core/src/tests/: arithmetic_tests.rs  display_tests.rs  flow_control_tests.rs  input_tests.rs  instruction_tests.rs  memory_tests.rs  mod.rs
chip8_desktop/: Cargo.toml
chip8_desktop/src/: gui.rs  main.rs
chip8_driver/: Cargo.toml
chip8_driver/src/: lib.rs
chip8_tauri/: mise.toml  package.json  pnpm-lock.yaml
chip8_tauri/src/: app.css  app.html
chip8_tauri/src-tauri/: Cargo.toml  tauri.conf.json
chip8_tauri/src-tauri/capabilities/: default.json
chip8_tauri/src-tauri/src/: lib.rs  main.rs
chip8_tauri/src/routes/: +page.svelte
